💄(frontend) fix dashboard layout issue
Currently, Dashboard does not take the full height available in the flex flow.
As dashboard has a grey background and body has a white one, there was a look'n
feel issue.

--- a/src/frontend/js/widgets/Dashboard/components/DashboardLayout/_styles.scss
+++ b/src/frontend/js/widgets/Dashboard/components/DashboardLayout/_styles.scss
@@ -4,6 +4,10 @@ $dashboard-filters-height: rem-calc(48px);
 $dashboard-header-spacing: rem-calc(16px);
 $sidebar-spacing-top: $dashboard-breadcrumb-height + $dashboard-header-spacing;
 
+.richie-react--dashboard {
+  min-height: 100%;
+}
+
 .dashboard {
   @include make-container();
   @include make-container-max-widths();
